<resources>
    <string name="app_name">Android-213</string>
    <string name="main_tv_title">Знакомство с Android</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_anim">Animation</string>
    <string name="main_btn_game">Game</string>
    <string name="main_btn_rate">Rates</string>
    <string name="main_btn_chat">Chat</string>

    <!--  region Calculator-->
    <string name="calc_tv_title">Калькулятор</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_CE">CE</string>
    <string name="calc_btn_C">C</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inv">1/x</string>
    <string name="calc_btn_sqr">x^2</string>
    <string name="calc_btn_sqrt">√</string>
    <string name="calc_btn_div">÷</string>
    <string name="calc_btn_mul">×</string>
    <string name="calc_btn_sub">-</string>
    <string name="calc_btn_add">+</string>
    <string name="calc_btn_equal">=</string>
    <string name="calc_btn_dot">,</string>
    <string name="calc_btn_pm">+/-</string>
    <string name="calc_btn_MC">MC</string>
    <string name="calc_btn_MR">MR</string>
    <string name="calc_btn_Mplus">M+</string>
    <string name="calc_btn_Mmin">M-</string>
    <string name="calc_btn_MS">MS</string>
    <string name="calc_btn_Mdown">M↓</string>
    <string name="calc_inv_tpl">1 / (%s) =</string>
    <string name="calc_err_div_zero">Деление на 0</string>
    <string name="calc_err_sqrt">Error sqrt</string>
    <string name="calc_err_generic">Generic error</string>
    <string name="title_activity_game">GameActivity</string>
    <!-- endregion-->

    <!--    region Game-->
    <string name="game_tv_title">2048</string>
    <string name="game_tv_hint">Join the numbers and get the 2048 to title</string>
    <string name="game_btn_new">NEW</string>
    <string name="game_tv_undo">UNDO</string>
    <string name="score_n512">SCORE\n512</string>
    <string name="best_n512">BEST\n512</string>
    <string name="game_tv_score_tpl">SCORE\n%s</string>
    <string name="game_tv_best_tpl">BEST\n%s</string>
    <string name="title_activity_anim">AnimActivity</string>
    <!--    endregion-->

    <!--    region Game-->
    <string name="anim_title">Anim</string>
    <string name="anim_tv_scale">Scale</string>
    <string name="anim_tv_rotate">Rotate</string>
    <string name="anim_tv_translate">Translate</string>
    <string name="title_activity_rate">RateActivity</string>
    <!--    endregion-->

    <string name="rate_load_failed">Ошибка загрузки</string>
    <string name="rate_sv_description">Все курсы валют</string>
    <string name="rate_btn_close_description">Закрыть окно</string>
    <string name="rate_field_choose_date">Дата</string>
    <string name="rate_field_search">Поиск</string>

    <string name="rate_info">
    Повна назва: %1$s\nСкорочена назва: %2$s\nКод за r030: %3$d\nКурс на %4$s: 1 %2$s = %5$.4f HRN
    </string>

    <string name="chat_tv_author">Author</string>
    <string name="chat_tv_message">Text:</string>
    <string name="chat_iv_bell_description">New notification</string>
    <string name="chat_tv_message_hint">message</string>
    <string name="chat_msg_empty_author">Enter your name</string>
    <string name="chat_msg_empty_message">Put the message</string>

</resources>