<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:clipChildren="false">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_tv_author"/>
        <EditText
            android:id="@+id/chat_et_author"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:autofillHints="name"
            android:inputType="text"
            android:hint="@string/chat_tv_author"/>
        <ImageView
            android:id="@+id/chat_iv_bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:src="@android:drawable/ic_popup_reminder"
            android:contentDescription="@string/chat_iv_bell_description"
            app:tint="@color/game_tile64_bg" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_rv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/main_btn_chat"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_tv_message"/>
        <EditText
            android:id="@+id/chat_et_message"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:autofillHints="@null"
            android:inputType="text"
            android:hint="@string/chat_tv_message_hint"/>
        <ImageButton
            android:id="@+id/chat_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:src="@android:drawable/ic_menu_send"
            android:contentDescription="@string/chat_iv_bell_description"
            app:tint="@color/game_tile64_bg" />
    </LinearLayout>
</LinearLayout>