<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/game_all_shape"
            android:backgroundTint="@color/game_tv_title"
            android:text="@string/game_tv_title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/game_tv_score"
                style="@style/game_tv_score"
                android:text="@string/score_n512"/>
            <Button
                android:id="@+id/game_btn_new"
                style="@style/btn_new"
                android:text="@string/game_btn_new"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/game_tv_best"
                style="@style/game_tv_score"
                android:text="@string/best_n512"/>
            <Button
                android:id="@+id/game_btn_undo"
                style="@style/btn_new"
                android:text="@string/game_tv_undo"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_tv_hint"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/game_layout_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="6dp"
        android:orientation="vertical"
        android:background="@drawable/game_all_shape"
        android:backgroundTint="@color/game_field_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
            <TextView
                style="@style/game_tv_tile"
                android:backgroundTint="@color/game_tile0_bg"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>